Backport Java 21 APIs to Java 17 compatible syntax
Fixed in JavacConverter and JavadocConverter:
- Replaced Stream.toList() → collect(Collectors.toList()) [Java 16 → Java 8]
- Replaced List.getFirst() → get(0) [Java 21 → Java 8]
- Replaced List.addFirst(elem) → add(0, elem) [Java 21 → Java 8]
- Fixed String.indexOf(str, start, end) → substring + indexOf [doesn't exist]
- Fixed qualified case labels CaseKind.STATEMENT → STATEMENT [Java 21 → Java 17]

Errors reduced: 124 → 114

Remaining 114 errors are all internal JDT API visibility issues:
- Internal constructors (SimpleName, TypeParameter, etc.)
- Internal methods (internalSetIdentifier, setParent, etc.)
- Internal fields (AST.apiLevel, JLS*_INTERNAL constants)